// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-623"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root-627 makeStyles-root-624 makeStyles-root-626"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input-637 makeStyles-input-625"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-643 makeStyles-noShrink-644"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root-1 MuiBox-root-2"
>
  <div
    className="MuiBox-root-1 MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-24"
  >
    <button
      className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-25"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-27"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Full Width
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-28"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root-21 MuiFab-root-33 makeStyles-root-29 MuiFab-extended-37 makeStyles-extended-30 MuiFab-secondary-36 makeStyles-secondary-32 MuiFab-sizeSmall-41 makeStyles-sizeSmall-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label-34"
      >
        <div
          className="MuiBox-root-1 MuiBox-root-43"
        >
          <img
            alt="Download"
            className="makeStyles-root-44"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root-1 MuiBox-root-49"
        >
          <h6
            className="MuiTypography-root-52 MuiTypography-subtitle2-64 MuiTypography-colorTextPrimary-77"
          >
            Download
          </h6>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root-92 MuiBox-root-93"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-126"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-127"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-128"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-129"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-130"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-131"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-132"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root-133 MuiBox-root-134"
>
  <div
    className="MuiBox-root-133 MuiBox-root-135"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-136"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root-133 MuiBox-root-141"
  >
    <div
      className="MuiBox-root-133 MuiBox-root-142"
    >
      <img
        alt="Download"
        className="makeStyles-root-136"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-143 MuiBox-root-144"
>
  <div
    className="MuiBox-root-143 MuiBox-root-145"
  >
    <h4
      className="MuiTypography-root-148 MuiTypography-h4-156 MuiTypography-colorPrimary-171 makeStyles-inline-146"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-148 MuiTypography-h4-156 makeStyles-inline-146"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-143 MuiBox-root-178"
  >
    <h6
      className="MuiTypography-root-148 MuiTypography-h6-158"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-143 MuiBox-root-179"
  />
  <div
    className="MuiBox-root-143 MuiBox-root-180"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-181"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-186 MuiBox-root-187"
  >
    <label
      className="MuiFormControlLabel-root-188"
    >
      <span
        className="MuiSwitch-root-194"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-216 MuiIconButton-root-207 MuiPrivateSwitchBase-root-203 MuiSwitch-switchBase-195 MuiSwitch-colorPrimary-196"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-215"
          >
            <span
              className="MuiSwitch-thumb-201"
            />
            <input
              className="MuiPrivateSwitchBase-input-206 MuiSwitch-input-200"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-202"
        />
      </span>
      <span
        className="MuiTypography-root-219 MuiTypography-body1-221 MuiFormControlLabel-label-193"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-186 MuiBox-root-249"
  >
    <label
      className="MuiFormControlLabel-root-188"
    >
      <span
        className="MuiSwitch-root-194"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-216 MuiIconButton-root-207 MuiPrivateSwitchBase-root-203 MuiSwitch-switchBase-195 MuiSwitch-colorPrimary-196"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-215"
          >
            <span
              className="MuiSwitch-thumb-201"
            />
            <input
              className="MuiPrivateSwitchBase-input-206 MuiSwitch-input-200"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-202"
        />
      </span>
      <span
        className="MuiTypography-root-219 MuiTypography-body1-221 MuiFormControlLabel-label-193"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-343 MuiBox-root-344"
  >
    <div
      className="MuiBox-root-343 MuiBox-root-345"
    >
      <div
        className="MuiBox-root-343 MuiBox-root-346"
      >
        <button
          className="MuiButtonBase-root-364 MuiButton-root-347 MuiButton-contained-355 MuiButton-containedPrimary-356"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-348"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-369 MuiTypography-body1-371"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-369 MuiTypography-body2-370 MuiPaper-root-410 MuiPaper-elevation6-418 MuiSnackbarContent-root-407 makeStyles-info-401"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-408"
        >
          <div
            className="MuiBox-root-343 MuiBox-root-437 makeStyles-message-405"
          >
            <div
              className="makeStyles-iconBackground-406"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-438"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-369 MuiTypography-subtitle1-380 makeStyles-info-401"
            >
              Hi INFO
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-409"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-364 MuiIconButton-root-443 MuiIconButton-colorSecondary-448"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-451"
            >
              <img
                alt="Close"
                className="makeStyles-root-438"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-343 MuiBox-root-452"
    >
      <div
        className="MuiBox-root-343 MuiBox-root-453"
      >
        <button
          className="MuiButtonBase-root-364 MuiButton-root-347 MuiButton-contained-355 MuiButton-containedPrimary-356"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-348"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-369 MuiTypography-body1-371"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-369 MuiTypography-body2-370 MuiPaper-root-410 MuiPaper-elevation6-418 MuiSnackbarContent-root-407 makeStyles-warning-402"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-408"
        >
          <div
            className="MuiBox-root-343 MuiBox-root-454 makeStyles-message-405"
          >
            <div
              className="makeStyles-iconBackground-406"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-438"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-369 MuiTypography-subtitle1-380 makeStyles-warning-402"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-409"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-364 MuiIconButton-root-443 MuiIconButton-colorSecondary-448"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-451"
            >
              <img
                alt="Close"
                className="makeStyles-root-438"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-343 MuiBox-root-455"
    >
      <div
        className="MuiBox-root-343 MuiBox-root-456"
      >
        <button
          className="MuiButtonBase-root-364 MuiButton-root-347 MuiButton-contained-355 MuiButton-containedPrimary-356"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-348"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-369 MuiTypography-body1-371"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-369 MuiTypography-body2-370 MuiPaper-root-410 MuiPaper-elevation6-418 MuiSnackbarContent-root-407 makeStyles-error-400"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-408"
        >
          <div
            className="MuiBox-root-343 MuiBox-root-457 makeStyles-message-405"
          >
            <div
              className="makeStyles-iconBackground-406"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-438"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-369 MuiTypography-subtitle1-380 makeStyles-error-400"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-409"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-364 MuiIconButton-root-443 MuiIconButton-colorSecondary-448"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-451"
            >
              <img
                alt="Close"
                className="makeStyles-root-438"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-260 MuiBox-root-261"
  >
    <div
      className="makeStyles-container-263"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-266"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-260 MuiBox-root-271"
  >
    <p
      className="MuiTypography-root-274 MuiTypography-body1-276 makeStyles-inline-272"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-263"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-266"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-306 MuiTypography-h4-314"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-306 MuiTypography-h5-315"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-h6-316"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-306 MuiTypography-body1-308"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-306 MuiTypography-body2-307"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle2-318"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle2-318 MuiTypography-colorPrimary-329 makeStyles-inline-304"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle2-318 makeStyles-inline-304"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-469 MuiFormControl-marginNormal-470 MuiTextField-root-468"
  >
    <label
      className="MuiFormLabel-root-485 MuiInputLabel-root-473 MuiInputLabel-formControl-479 MuiInputLabel-animated-482 MuiInputLabel-shrink-481"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-505 MuiOutlinedInput-root-492 MuiInputBase-formControl-506"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-521 MuiOutlinedInput-notchedOutline-499"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-522"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-515 MuiOutlinedInput-input-500"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root-523 MuiBox-root-524"
  >
    <div
      className="makeStyles-dropdown-525"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-505 makeStyles-root-526 makeStyles-root-528"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-515 makeStyles-input-527"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-529 makeStyles-noShrink-530"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-551 MuiButtonBase-disabled-552 MuiButton-root-534 MuiButton-contained-542 MuiButton-containedPrimary-543 MuiButton-disabled-546"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-535"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root-554 MuiBox-root-555"
>
  <div
    className="MuiBox-root-554 MuiBox-root-556"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-558 MuiFormControl-marginNormal-559 MuiTextField-root-557"
      >
        <label
          className="MuiFormLabel-root-574 MuiFormLabel-error-577 MuiInputLabel-error-565 MuiInputLabel-root-562 MuiInputLabel-formControl-568 MuiInputLabel-animated-571 MuiInputLabel-shrink-570"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-594 MuiOutlinedInput-root-581 MuiInputBase-error-600 MuiOutlinedInput-error-586 MuiInputBase-formControl-595"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-610 MuiOutlinedInput-notchedOutline-588"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-611"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-604 MuiOutlinedInput-input-589"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-612 MuiFormHelperText-contained-616 MuiFormHelperText-error-613"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-554 MuiBox-root-620"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-558 MuiFormControl-marginNormal-559 MuiTextField-root-557"
      >
        <label
          className="MuiFormLabel-root-574 MuiInputLabel-root-562 MuiInputLabel-formControl-568 MuiInputLabel-animated-571 MuiInputLabel-shrink-570"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-594 MuiOutlinedInput-root-581 MuiInputBase-formControl-595"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-610 MuiOutlinedInput-notchedOutline-588"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-611"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-604 MuiOutlinedInput-input-589"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-554 MuiBox-root-621"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-558 MuiFormControl-marginNormal-559 MuiTextField-root-557"
      >
        <label
          className="MuiFormLabel-root-574 MuiFormLabel-disabled-576 MuiInputLabel-disabled-564 MuiInputLabel-root-562 MuiInputLabel-formControl-568 MuiInputLabel-animated-571 MuiInputLabel-shrink-570"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-594 MuiOutlinedInput-root-581 MuiInputBase-disabled-597 MuiOutlinedInput-disabled-583 MuiInputBase-formControl-595"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-610 MuiOutlinedInput-notchedOutline-588"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-611"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-604 MuiOutlinedInput-input-589 MuiInputBase-disabled-597 MuiOutlinedInput-disabled-583"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-554 MuiBox-root-622"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-558 MuiFormControl-marginNormal-559 MuiTextField-root-557"
      >
        <label
          className="MuiFormLabel-root-574 MuiInputLabel-root-562 MuiInputLabel-formControl-568 MuiInputLabel-animated-571 MuiInputLabel-shrink-570"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-594 MuiOutlinedInput-root-581 MuiInputBase-formControl-595"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-610 MuiOutlinedInput-notchedOutline-588"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-611"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-604 MuiOutlinedInput-input-589"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root-648 MuiBox-root-649"
  id="/signup_first"
>
  <h4
    className="MuiTypography-root-652 MuiTypography-h4-660 MuiTypography-colorPrimary-675 makeStyles-inline-650"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-652 MuiTypography-h4-660 makeStyles-inline-650"
  >
     Account
  </h4>
  <div
    className="MuiBox-root-648 MuiBox-root-682"
  />
  <form
    onSubmit={[Function]}
  >
    <div
      className="makeStyles-dropdown-683"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-687 makeStyles-root-684 makeStyles-root-686"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-697 makeStyles-input-685"
          name="SELECT_FIELD_ATTR"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-703 makeStyles-noShrink-704"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </form>
  <div
    className="MuiBox-root-648 MuiBox-root-708"
  />
  <div
    className="MuiBox-root-648 MuiBox-root-709"
  >
    <div
      className="MuiBox-root-648 MuiBox-root-710"
    >
      This is the block where we show accounts and bns name
    </div>
    <div
      className="MuiBox-root-648 MuiBox-root-711"
    >
      This is the block where we show balances
    </div>
    <div
      className="MuiBox-root-648 MuiBox-root-712"
    >
      This is the block where we show QR Code
    </div>
    <div
      className="MuiBox-root-648 MuiBox-root-713"
    >
      This is the block where we show links
    </div>
  </div>
  <div
    className="MuiBox-root-648 MuiBox-root-714"
  />
  <div
    className="MuiBox-root-648 MuiBox-root-715"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-703"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root-723 MuiBox-root-724"
  id="/login"
>
  <div
    className="MuiBox-root-723 MuiBox-root-725"
  >
    <h4
      className="MuiTypography-root-728 MuiTypography-h4-736 MuiTypography-colorPrimary-751 makeStyles-inline-726"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root-728 MuiTypography-h4-736 makeStyles-inline-726"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root-723 MuiBox-root-758"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-723 MuiBox-root-759"
      >
        <div
          className="MuiFormControl-root-761 MuiFormControl-marginNormal-762 MuiFormControl-fullWidth-764 MuiTextField-root-760"
        >
          <div
            className="MuiInputBase-root-778 MuiOutlinedInput-root-765 MuiInputBase-fullWidth-787 MuiInputBase-formControl-779"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-794 MuiOutlinedInput-notchedOutline-772"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-795"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-788 MuiOutlinedInput-input-773"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-723 MuiBox-root-796"
      >
        <div
          className="MuiBox-root-723 MuiBox-root-797"
        >
          <button
            className="MuiButtonBase-root-815 MuiButtonBase-disabled-816 MuiButton-root-798 MuiButton-contained-806 MuiButton-containedPrimary-807 MuiButton-disabled-810 MuiButton-fullWidth-814"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-799"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root-723 MuiBox-root-818"
    >
      <div
        className="MuiBox-root-723 MuiBox-root-819"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-728 MuiTypography-subtitle2-740 MuiTypography-colorPrimary-751 makeStyles-inline-726 makeStyles-link-727"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root-723 MuiBox-root-820"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-728 MuiTypography-subtitle2-740 MuiTypography-colorPrimary-751 makeStyles-inline-726 makeStyles-link-727"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-723 MuiBox-root-821"
  />
  <div
    className="MuiBox-root-723 MuiBox-root-822"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-823"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root-828 MuiBox-root-829"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root-828 MuiBox-root-830"
  >
    <h4
      className="MuiTypography-root-833 MuiTypography-h4-841 MuiTypography-colorPrimary-856 makeStyles-inline-831"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root-833 MuiTypography-h4-841 makeStyles-inline-831"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root-828 MuiBox-root-863"
  >
    <div
      className="MuiBox-root-828 MuiBox-root-864"
    >
      <h6
        className="MuiTypography-root-833 MuiTypography-subtitle2-845"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root-828 MuiBox-root-865"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root-880 MuiFab-root-870 makeStyles-root-866 MuiFab-extended-874 makeStyles-extended-867 MuiFab-secondary-873 makeStyles-secondary-869 MuiFab-sizeSmall-878 makeStyles-sizeSmall-868"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label-871"
        >
          <div
            className="MuiBox-root-828 MuiBox-root-883"
          >
            <img
              alt="Download"
              className="makeStyles-root-884"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root-828 MuiBox-root-889"
          >
            <h6
              className="MuiTypography-root-833 MuiTypography-subtitle2-845 MuiTypography-colorTextPrimary-858"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-828 MuiBox-root-890"
    >
      <p
        className="MuiTypography-root-833 MuiTypography-body1-835 makeStyles-inline-831"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-828 MuiBox-root-891"
    >
      <div
        className="MuiBox-root-828 MuiBox-root-892"
      >
        <button
          className="MuiButtonBase-root-880 MuiButton-root-893 MuiButton-text-895 MuiButton-textPrimary-896 MuiButton-fullWidth-909"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-894"
          >
            Back
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-828 MuiBox-root-910"
  />
  <div
    className="MuiBox-root-828 MuiBox-root-911"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-884"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-922 MuiBox-root-923"
  id="/signup1"
>
  <div
    className="MuiBox-root-922 MuiBox-root-924"
  >
    <h4
      className="MuiTypography-root-927 MuiTypography-h4-935 MuiTypography-colorPrimary-950 makeStyles-inline-925"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-927 MuiTypography-h4-935 makeStyles-inline-925"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-922 MuiBox-root-957"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-922 MuiBox-root-958"
      >
        <div
          className="MuiFormControl-root-960 MuiFormControl-marginNormal-961 MuiFormControl-fullWidth-963 MuiTextField-root-959"
        >
          <label
            className="MuiFormLabel-root-976 MuiFormLabel-required-981 MuiInputLabel-required-968 MuiInputLabel-root-964 MuiInputLabel-formControl-970 MuiInputLabel-animated-973 MuiInputLabel-shrink-972"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-982 MuiInputLabel-asterisk-969"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-996 MuiOutlinedInput-root-983 MuiInputBase-fullWidth-1005 MuiInputBase-formControl-997"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1012 MuiOutlinedInput-notchedOutline-990"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1013"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1006 MuiOutlinedInput-input-991"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-922 MuiBox-root-1014"
      >
        <div
          className="MuiFormControl-root-960 MuiFormControl-marginNormal-961 MuiFormControl-fullWidth-963 MuiTextField-root-959"
        >
          <label
            className="MuiFormLabel-root-976 MuiFormLabel-required-981 MuiInputLabel-required-968 MuiInputLabel-root-964 MuiInputLabel-formControl-970 MuiInputLabel-animated-973 MuiInputLabel-shrink-972"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-982 MuiInputLabel-asterisk-969"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-996 MuiOutlinedInput-root-983 MuiInputBase-fullWidth-1005 MuiInputBase-formControl-997"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1012 MuiOutlinedInput-notchedOutline-990"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1013"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1006 MuiOutlinedInput-input-991"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-922 MuiBox-root-1015"
      >
        <div
          className="MuiFormControl-root-960 MuiFormControl-marginNormal-961 MuiFormControl-fullWidth-963 MuiTextField-root-959"
        >
          <label
            className="MuiFormLabel-root-976 MuiFormLabel-required-981 MuiInputLabel-required-968 MuiInputLabel-root-964 MuiInputLabel-formControl-970 MuiInputLabel-animated-973 MuiInputLabel-shrink-972"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-982 MuiInputLabel-asterisk-969"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-996 MuiOutlinedInput-root-983 MuiInputBase-fullWidth-1005 MuiInputBase-formControl-997"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1012 MuiOutlinedInput-notchedOutline-990"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1013"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1006 MuiOutlinedInput-input-991"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-922 MuiBox-root-1016"
      >
        <div
          className="MuiBox-root-922 MuiBox-root-1017"
        >
          <button
            className="MuiButtonBase-root-1035 MuiButton-root-1018 MuiButton-text-1020 MuiButton-textPrimary-1021 MuiButton-fullWidth-1034"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1019"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-922 MuiBox-root-1038"
        >
          <button
            className="MuiButtonBase-root-1035 MuiButtonBase-disabled-1036 MuiButton-root-1018 MuiButton-contained-1026 MuiButton-containedPrimary-1027 MuiButton-disabled-1030 MuiButton-fullWidth-1034"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-1019"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-922 MuiBox-root-1039"
  />
  <div
    className="MuiBox-root-922 MuiBox-root-1040"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1041"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-1056 MuiBox-root-1057"
  id="/signup2"
>
  <div
    className="MuiBox-root-1056 MuiBox-root-1058"
  >
    <h4
      className="MuiTypography-root-1061 MuiTypography-h4-1069 MuiTypography-colorPrimary-1084 makeStyles-inline-1059"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1061 MuiTypography-h4-1069 makeStyles-inline-1059"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1056 MuiBox-root-1091"
  >
    <div
      className="MuiBox-root-1056 MuiBox-root-1092"
    >
      <div
        className="MuiBox-root-1056 MuiBox-root-1093"
      >
        <div
          className="MuiBox-root-1056 MuiBox-root-1094"
        >
          <h6
            className="MuiTypography-root-1061 MuiTypography-subtitle2-1073 makeStyles-inline-1059"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1096"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1099"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-1104"
      >
        <span
          className="MuiSwitch-root-1110"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-1132 MuiIconButton-root-1123 MuiPrivateSwitchBase-root-1119 MuiSwitch-switchBase-1111 MuiSwitch-colorPrimary-1112"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-1131"
            >
              <span
                className="MuiSwitch-thumb-1117"
              />
              <input
                className="MuiPrivateSwitchBase-input-1122 MuiSwitch-input-1116"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-1118"
          />
        </span>
        <span
          className="MuiTypography-root-1061 MuiTypography-body1-1063 MuiFormControlLabel-label-1109"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-1056 MuiBox-root-1135"
    >
      <p
        className="MuiTypography-root-1061 MuiTypography-body1-1063 makeStyles-inline-1059"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-1056 MuiBox-root-1136"
    >
      <div
        className="MuiBox-root-1056 MuiBox-root-1137"
      >
        <button
          className="MuiButtonBase-root-1132 MuiButton-root-1138 MuiButton-text-1140 MuiButton-textPrimary-1141 MuiButton-fullWidth-1154"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1139"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-1056 MuiBox-root-1155"
      >
        <button
          className="MuiButtonBase-root-1132 MuiButton-root-1138 MuiButton-contained-1146 MuiButton-containedPrimary-1147 MuiButton-fullWidth-1154"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1139"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-1056 MuiBox-root-1156"
  />
  <div
    className="MuiBox-root-1056 MuiBox-root-1157"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1099"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-1168 MuiBox-root-1169"
  id="/signup3"
>
  <div
    className="MuiBox-root-1168 MuiBox-root-1170"
  >
    <h4
      className="MuiTypography-root-1173 MuiTypography-h4-1181 MuiTypography-colorPrimary-1196 makeStyles-inline-1171"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1173 MuiTypography-h4-1181 makeStyles-inline-1171"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1168 MuiBox-root-1203"
  >
    <h6
      className="MuiTypography-root-1173 MuiTypography-subtitle1-1184 makeStyles-inline-1171"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1168 MuiBox-root-1204"
      >
        <div
          className="MuiFormControl-root-1206 MuiFormControl-marginNormal-1207 MuiFormControl-fullWidth-1209 MuiTextField-root-1205"
        >
          <div
            className="MuiInputBase-root-1223 MuiOutlinedInput-root-1210 MuiInputBase-fullWidth-1232 MuiInputBase-formControl-1224"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1239 MuiOutlinedInput-notchedOutline-1217"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1240"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1233 MuiOutlinedInput-input-1218"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1168 MuiBox-root-1241"
      >
        <div
          className="MuiBox-root-1168 MuiBox-root-1242"
        >
          <button
            className="MuiButtonBase-root-1260 MuiButton-root-1243 MuiButton-text-1245 MuiButton-textPrimary-1246 MuiButton-fullWidth-1259"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1244"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1168 MuiBox-root-1263"
        >
          <button
            className="MuiButtonBase-root-1260 MuiButton-root-1243 MuiButton-contained-1251 MuiButton-containedPrimary-1252 MuiButton-fullWidth-1259"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1244"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1168 MuiBox-root-1264"
  />
  <div
    className="MuiBox-root-1168 MuiBox-root-1265"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1266"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1281 MuiBox-root-1282"
  id="/welcome"
>
  <div
    className="MuiBox-root-1281 MuiBox-root-1283"
  >
    <h4
      className="MuiTypography-root-1286 MuiTypography-h4-1294 MuiTypography-colorPrimary-1309 makeStyles-inline-1284"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1286 MuiTypography-h4-1294 makeStyles-inline-1284"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-1281 MuiBox-root-1316"
  >
    <p
      className="MuiTypography-root-1286 MuiTypography-body1-1288 makeStyles-inline-1284"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1281 MuiBox-root-1317"
    />
    <button
      className="MuiButtonBase-root-1335 MuiButton-root-1318 MuiButton-contained-1326 MuiButton-containedPrimary-1327 MuiButton-fullWidth-1334"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1319"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-1281 MuiBox-root-1338"
    />
    <button
      className="MuiButtonBase-root-1335 MuiButton-root-1318 MuiButton-contained-1326 MuiButton-containedPrimary-1327 MuiButton-fullWidth-1334"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1319"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-1281 MuiBox-root-1339"
    />
    <button
      className="MuiButtonBase-root-1335 MuiButton-root-1318 MuiButton-contained-1326 MuiButton-containedPrimary-1327 MuiButton-fullWidth-1334"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1319"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1281 MuiBox-root-1340"
  />
  <div
    className="MuiBox-root-1281 MuiBox-root-1341"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1342"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
